<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rojo"
    tools:context=".ResultActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/etqTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/etqTitleResult"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_background"
                android:padding="10dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:gravity="end">

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text=""
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/etqVotos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/column_background"
                        android:text="@string/colCantidad"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/etqPorcentaje"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/column_background"
                        android:text="@string/colPorcentaje"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="24sp" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        app:srcCompat="@drawable/pan" />

                    <TextView
                        android:id="@+id/vPan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/column_background"
                        android:text="@string/etqVacia"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/porcPan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/column_background"
                        android:text="@string/etqVacia"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        app:srcCompat="@drawable/prd" />

                    <TextView
                        android:id="@+id/vPrd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/column_background"
                        android:text="@string/etqVacia"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/porcPrd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/column_background"
                        android:text="@string/etqVacia"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="22sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        app:srcCompat="@drawable/pri" />

                    <TextView
                        android:id="@+id/vPri"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/column_background"
                        android:text="@string/etqVacia"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/porcPri"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/column_background"
                        android:text="@string/etqVacia"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="22sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        app:srcCompat="@drawable/pt" />

                    <TextView
                        android:id="@+id/vPt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/column_background"
                        android:text="@string/etqVacia"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/porcPt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/column_background"
                        android:text="@string/etqVacia"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="22sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        app:srcCompat="@drawable/verde" />

                    <TextView
                        android:id="@+id/vVerde"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/column_background"
                        android:text="@string/etqVacia"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/porcVerde"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/column_background"
                        android:text="@string/etqVacia"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="22sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        app:srcCompat="@drawable/alianza" />

                    <TextView
                        android:id="@+id/vAlianza"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/column_background"
                        android:text="@string/etqVacia"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/porcAlianza"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/column_background"
                        android:text="@string/etqVacia"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="22sp" />
                </TableRow>

            </TableLayout>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/etqTotalVotos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/etqCantidadVotos"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/etqVacia"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </TableRow>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>